gcc/testsuite/rust/compile/issue-4222.rs
#![cfg(false)]
// { dg-error ".false. predicate key cannot be a literal" "" { target *-*-* } .-1 }
fn a() {}
